--- a/About/About/index.html
+++ b/About/About/index.html
@@ -106,9 +106,9 @@
 <p><img src="/assets/Creative-Commons-Attribution-ShareAlike-badge.webp" alt="ccbadge" /></p>
 <div class="copyright">Copyright (c) 2024-2025 Oxford Brookes University<br>
 Copyright (c) 2024-2025 University of Bristol<br><br></div>
-<p>To reuse this material in your own work, include a statement such as:</p>
+<p>If reuse this material in your own work, you must include a statement such as the following:</p>
 <blockquote>
-<p>This article re-uses material from the work &quot;Open Research Book&quot; &#40;<a href="https://orbook.github.io">https://orbook.github.io</a>&#41; by Joseph Corneli, Robyn Curtis, Eric White, and David Bullock, which is used here under the terms of the <a href="https://creativecommons.org/licenses/by/4.0/deed.en">Creative Commons Attribution 4.0 Licence</a>.</p>
+<p>This article re-uses material from the work &quot;Open Research Book&quot; &#40;<a href="https://orbook.github.io">https://orbook.github.io</a>&#41; by Joseph Corneli, Robyn Curtis, Eric White, and David Bullock, which is used here under the terms of the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Attribution-ShareAlike 4.0 International</a> license.  If you re-use this material, you must include a similar statement in the derived work you create.</p>
 </blockquote>
 <div class="page-foot">
   <hr>
