--- a/__site/index.html
+++ b/__site/index.html
@@ -30,7 +30,7 @@
       </a>
     </div>
     <label for="show-menu" class="show-menu">MENU</label>
-    <input type="checkbox" id="show-menu" role="button">
+    <input type="checkbox" id="show-menu" role="button" aria-pressed="true">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item active"><a href="/" class="menu-list-link active">Home</a>
@@ -77,19 +77,21 @@
   <div class="main-content-wrap"> <!-- closed in foot.html -->
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
-        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png"</a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
+        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png" alt="UKRN"></a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
       </div>
 
 
 
 <!-- Content appended here (in class franklin-content) -->
 <div class="franklin-content"><h1 id="introduction_to_the_open_research_book"><a href="#introduction_to_the_open_research_book" class="header-anchor">Introduction to the Open Research Book</a></h1>
-<p><div class="franklin-toc"><ol><li><a href="#background">Background</a></li><li><a href="#quick_tour">Quick tour</a></li></ol></div> </p>
+
+<div class="franklin-toc"><ol><li><a href="#background">Background</a></li><li><a href="#quick_tour">Quick tour</a></li></ol></div>
+
 <h2 id="background"><a href="#background" class="header-anchor">Background</a></h2>
 <p>The initial contents of this web page are 15 scripts for videos that were produced at Oxford Brookes to introduce basic topics in Open Research. We followed an outline shared in image we first encountered care of Anton Muszanskyj.  &#40;If you know where it came from please let us know.&#41;</p>
 <div class="row"><div class="container"><div class="left"><img src="./assets/or-graphic-small.png" alt="" /></div></div>
 <p>We followed the high-level outline breaking the sections down into <strong>open</strong> 
-<a href="/Infrastructure/1.1 Open Licensing/">Infrastructure</a>, <a href="/Methods/2.1 Citizen Science and Crowdsourcing/">Methods</a>, <a href="/Communities/3.2 Research Diversity/">Communities</a>, and <a href="/Knowledge/4.1 Open Educational Resources/">Knowledge</a>.  In some cases we combined some of the topics into one script, but in general we followed the lower-level outline as well.  The hope is that this can be used as a starting point for further improvements.
+<a href="/Infrastructure/Open_Licensing/">Infrastructure</a>, <a href="/Methods/Citizen_Science_and_Crowdsourcing/">Methods</a>, <a href="/Communities/Research_Diversity/">Communities</a>, and <a href="/Knowledge/Open_Educational_Resources/">Knowledge</a>.  In some cases we combined some of the topics into one script, but in general we followed the lower-level outline as well.  The hope is that this can be used as a starting point for further improvements.
  
 <div style="clear: both"></div>
 </p></div>
@@ -97,7 +99,7 @@
 <div class="example">Have a look around via the menu at left.  You’ll notice that most of the talks include some Oxford Brookes specific pointers towards the end.  These are highlighted in boxes, and labelled “<span style="color:blue;">⚠ Practice Example</span>”.  Other related practices may be in place at other institutions.</div>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: February 19, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: April 24, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
