--- a/Infrastructure/Interoperability/index.html
+++ b/Infrastructure/Interoperability/index.html
@@ -30,7 +30,7 @@
       </a>
     </div>
     <label for="show-menu" class="show-menu">MENU</label>
-    <input type="checkbox" id="show-menu" role="button">
+    <input type="checkbox" id="show-menu" role="button" aria-pressed="true">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item "><a href="/" class="menu-list-link ">Home</a>
@@ -77,7 +77,7 @@
   <div class="main-content-wrap"> <!-- closed in foot.html -->
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
-        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png"</a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
+        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png" alt="UKRN"></a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
       </div>
 
 
@@ -117,7 +117,7 @@
 <p>Abigail Emery, Dr Laura de Molière, Dr Paulina Lang, Dr Moira Nicolson, and Eleanor Prince. &#40;2021&#41; IN CASE: A behavioural approach to anticipating unintended consequences. Government Communication Service. <a href="https://gcs.civilservice.gov.uk/publications/in-case-a-behavioural-approach-to-anticipating-unintended-consequences/">https://gcs.civilservice.gov.uk/publications/in-case-a-behavioural-approach-to-anticipating-unintended-consequences/</a></p>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: April 14, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: April 24, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
