--- a/Methods/Open_Protocols/index.html
+++ b/Methods/Open_Protocols/index.html
@@ -30,7 +30,7 @@
       </a>
     </div>
     <label for="show-menu" class="show-menu">MENU</label>
-    <input type="checkbox" id="show-menu" role="button">
+    <input type="checkbox" id="show-menu" role="button" aria-pressed="true">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item "><a href="/" class="menu-list-link ">Home</a>
@@ -77,7 +77,7 @@
   <div class="main-content-wrap"> <!-- closed in foot.html -->
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
-        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png"</a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
+        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png" alt="UKRN"></a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
       </div>
 
 
@@ -113,7 +113,7 @@
 <p>Henderson, E. L., &amp; Chambers, C. D. &#40;2022&#41;. Ten simple rules for writing a Registered Report. In PLOS Computational Biology &#40;Vol. 18, Issue 10, p. e1010571&#41;. Public Library of Science &#40;PLoS&#41;. <a href="https://doi.org/10.1371/journal.pcbi.1010571">https://doi.org/10.1371/journal.pcbi.1010571</a></p>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: April 14, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: April 24, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
