--- a/menu1/index.html
+++ b/menu1/index.html
@@ -31,7 +31,7 @@
       </a>
     </div>
     <label for="show-menu" class="show-menu">MENU</label>
-    <input type="checkbox" id="show-menu" role="button">
+    <input type="checkbox" id="show-menu" role="button" aria-pressed="true">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item "><a href="/" class="menu-list-link ">Home</a>
@@ -78,7 +78,7 @@
   <div class="main-content-wrap"> <!-- closed in foot.html -->
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
-        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png"</a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
+        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png" alt="UKRN"></a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
       </div>
 
 
@@ -148,7 +148,7 @@ end</code></pre> </p>
 <p>Using this approach with the <code>generate_results.jl</code> file also makes sure that all the code on your website works and that all results match the code which makes maintenance easier.</p>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: April 14, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: April 24, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
