--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 
 <h2 id="background"><a href="#background" class="header-anchor">Background</a></h2>
 <p>The initial contents of this web page are 15 scripts for videos that were produced at Oxford Brookes to introduce basic topics in Open Research. We followed an outline shared in image we first encountered care of Anton Muszanskyj.  &#40;If you know where it came from please let us know.&#41;</p>
-<div class="row"><div class="container"><div class="left"><img src="./assets/or-graphic-small.png" alt="" /></div></div>
+
+<div class="row"><div class="container"><div class="left"><img src="./assets/or-graphic-small.png" alt="OR Practices"></div></div></div>
+
 <p>We followed the high-level outline breaking the sections down into <strong>open</strong> 
 <a href="/Infrastructure/Open_Licensing/">Infrastructure</a>, <a href="/Methods/Citizen_Science_and_Crowdsourcing/">Methods</a>, <a href="/Communities/Research_Diversity/">Communities</a>, and <a href="/Knowledge/Open_Educational_Resources/">Knowledge</a>.  In some cases we combined some of the topics into one script, but in general we followed the lower-level outline as well.  The hope is that this can be used as a starting point for further improvements.
- 
-<div style="clear: both"></div>
-</p></div>
+</p>
 <h2 id="quick_tour"><a href="#quick_tour" class="header-anchor">Quick tour</a></h2>
 <div class="example">Have a look around via the menu at left.  You’ll notice that most of the talks include some Oxford Brookes specific pointers towards the end.  These are highlighted in boxes, and labelled “<span style="color:blue;">⚠ Practice Example</span>”.  Other related practices may be in place at other institutions.</div>
 <div class="page-foot">
