try removing hypothesis

--- a/__site/About/About/index.html
+++ b/__site/About/About/index.html
@@ -119,7 +119,7 @@ Copyright (c) 2024-2025 University of Bristol<br><br></div>
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
-    <script src="https://hypothes.is/embed.js" async></script>
+    <!-- <script src="https://hypothes.is/embed.js" async></script> -->
     
     
   </body>
