--- a/Knowledge/Open_Software/index.html
+++ b/Knowledge/Open_Software/index.html
@@ -179,7 +179,7 @@
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
-    <script src="https://hypothes.is/embed.js" async></script>
+    <!-- <script src="https://hypothes.is/embed.js" async></script> -->
     
     
   </body>
