--- a/__site/menu3/index.html
+++ b/__site/menu3/index.html
@@ -179,7 +179,7 @@ end</code></pre>
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
-    <!-- <script src="https://hypothes.is/embed.js" async></script> -->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
       <script src="/libs/highlight/highlight.min.js"></script>
