--- a/menu1/index.html
+++ b/menu1/index.html
@@ -155,7 +155,7 @@ end</code></pre> </p>
     </div> <!-- end of class main-content -->
     </div> <!-- end of class main-content-wrap -->
     </div> <!-- end of class page-wrap-->
-    <!-- <script src="https://hypothes.is/embed.js" async></script> -->
+    <script src="https://hypothes.is/embed.js" async></script>
     
     
       <script src="/libs/highlight/highlight.min.js"></script>
