--- a/__site/Infrastructure/Open_Licensing/index.html
+++ b/__site/Infrastructure/Open_Licensing/index.html
@@ -30,7 +30,7 @@
       </a>
     </div>
     <label for="show-menu" class="show-menu">MENU</label>
-    <input type="checkbox" id="show-menu" role="button" aria-pressed="true">
+    <input type="checkbox" id="show-menu" role="button">
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item "><a href="/" class="menu-list-link ">Home</a>
@@ -77,7 +77,7 @@
   <div class="main-content-wrap"> <!-- closed in foot.html -->
     <div class="main-content">    <!-- closed in foot.html -->
       <div class="main-header">
-        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png" alt="UKRN"></a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
+        <a href="https://www.ukrn.org"><img style="width:45px;height:45px;padding-top:5px;padding-right:10px;" src="/assets/UKRN-Logo-768x768.png"</a> <a id="github" href="https://www.ukrn.org/open-research-programme/">Open Research Programme</a>
       </div>
 
 
@@ -123,7 +123,7 @@
 <p>van Gerven Oei, V. W. J. &#40;2020&#41;. Why CC BY-NC Licenses Are Still Necessary in Open Access Book Publishing. Punctum Books. Retrieved from <a href="https://punctumbooks.pubpub.org/pub/creative-commons-by-nc-licensing-open-access">https://punctumbooks.pubpub.org/pub/creative-commons-by-nc-licensing-open-access</a></p>
 <div class="page-foot">
   <hr>
-    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: April 24, 2025.
+    <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Joe Corneli <i><a href="/About/About/#formal_copyright_and_licensing_statement">et al</a></i>. Last modified: February 19, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
